[FLINK-14038] Add options to facilitate Flink process debugging
This commit adds an option to enable GC logging. Moreover, it enables automatic
heap dumps which can be disabled via an option.

Support for all deployment options(Yarn,Mesos,Standalone)

Update flink-dist/src/main/flink-bin/mesos-bin/mesos-taskmanager.sh

Co-Authored-By: Till Rohrmann <till.rohrmann@gmail.com>

Update flink-dist/src/main/flink-bin/mesos-bin/mesos-taskmanager.sh

Co-Authored-By: Till Rohrmann <till.rohrmann@gmail.com>

Update flink-runtime/src/main/java/org/apache/flink/runtime/clusterframework/BootstrapTools.java

Co-Authored-By: Till Rohrmann <till.rohrmann@gmail.com>

Fix style and add options to flink-console.sh

Fix jvm launch scripts quoting error causing yarn tests failure

This closes #9703.