@@ -99,6 +99,9 @@ DEFAULT_ENV_JAVA_OPTS_HS=""                         # Optional JVM args (History
 DEFAULT_ENV_SSH_OPTS=""                             # Optional SSH parameters running in cluster mode
 DEFAULT_YARN_CONF_DIR=""                            # YARN Configuration Directory, if necessary
 DEFAULT_HADOOP_CONF_DIR=""                          # Hadoop Configuration Directory, if necessary
+DEFAULT_JVM_HEAPDUMP_ON_OOM="true"                  # Whether enable heap dump on ooms
+DEFAULT_JVM_HEAPDUMP_DIRECTORY="/tmp"               # Heap dump directory
+DEFAULT_JVM_GC_LOGGING="false"                      # Whether enable gc logging
 
 ########################################################################################################################
 # CONFIG KEYS: The default values can be overwritten by the following keys in conf/flink-conf.yaml
@@ -132,6 +135,9 @@ KEY_ENV_JAVA_OPTS_HS="env.java.opts.historyserver"
 KEY_ENV_SSH_OPTS="env.ssh.opts"
 KEY_HIGH_AVAILABILITY="high-availability"
 KEY_ZK_HEAP_MB="zookeeper.heap.mb"
+KEY_JVM_GC_LOGGING="jvm.gc-logging"
+KEY_JVM_HEAPDUMP_ON_OOM="jvm.heapdump-on-oom"
+KEY_JVM_HEAPDUMP_DIRECTORY="jvm.heapdump.directory"
 
 ########################################################################################################################
 # MEMORY SIZE UNIT
@@ -486,6 +492,24 @@ if [ -z "${FLINK_ENV_JAVA_OPTS_HS}" ]; then
     FLINK_ENV_JAVA_OPTS_HS="$( echo "${FLINK_ENV_JAVA_OPTS_HS}" | sed -e 's/^"//'  -e 's/"$//' )"
 fi
 
+if [ -z "${FLINK_JVM_GC_LOGGING}" ];then
+    FLINK_JVM_GC_LOGGING=$(readFromConfig ${KEY_JVM_GC_LOGGING} "${DEFAULT_JVM_GC_LOGGING}" "${YAML_CONF}")
+    # Remove leading and ending double quotes (if present) of value
+    FLINK_JVM_GC_LOGGING="$( echo "${FLINK_JVM_GC_LOGGING}" | sed -e 's/^"//'  -e 's/"$//' )"
+fi
+
+if [ -z "${FLINK_JVM_HEAPDUMP_ON_OOM}" ];then
+    FLINK_JVM_HEAPDUMP_ON_OOM=$(readFromConfig ${KEY_JVM_HEAPDUMP_ON_OOM} "${DEFAULT_JVM_HEAPDUMP_ON_OOM}" "${YAML_CONF}")
+    # Remove leading and ending double quotes (if present) of value
+    FLINK_JVM_HEAPDUMP_ON_OOM="$( echo "${FLINK_JVM_HEAPDUMP_ON_OOM}" | sed -e 's/^"//'  -e 's/"$//' )"
+fi
+
+if [ -z "${FLINK_JVM_HEAPDUMP_DIRECTORY}" ];then
+    FLINK_JVM_HEAPDUMP_DIRECTORY=$(readFromConfig ${KEY_JVM_HEAPDUMP_DIRECTORY} "${DEFAULT_JVM_HEAPDUMP_DIRECTORY}" "${YAML_CONF}")
+    # Remove leading and ending double quotes (if present) of value
+    FLINK_JVM_HEAPDUMP_DIRECTORY="$( echo "${FLINK_JVM_HEAPDUMP_DIRECTORY}" | sed -e 's/^"//'  -e 's/"$//' )"
+fi
+
 if [ -z "${FLINK_SSH_OPTS}" ]; then
     FLINK_SSH_OPTS=$(readFromConfig ${KEY_ENV_SSH_OPTS} "${DEFAULT_ENV_SSH_OPTS}" "${YAML_CONF}")
 fi
@@ -775,4 +799,38 @@ calculateTaskManagerHeapSizeMB() {
     fi
 
     echo ${tm_heap_size_mb}
+}
+
+# Format default gc logging options
+getGCLoggingOpts() {
+    local gclog=$1
+    if [ ${FLINK_JVM_GC_LOGGING} ];then
+        FLINK_JVM_GC_LOGGING_OPTS="-Xloggc:${gclog} \
+          -XX:+PrintGCApplicationStoppedTime \
+          -XX:+PrintGCDetails \
+          -XX:+PrintGCDateStamps \
+          -XX:+UseGCLogFileRotation \
+          -XX:NumberOfGCLogFiles=10 \
+          -XX:GCLogFileSize=10M \
+          -XX:+PrintPromotionFailure \
+          -XX:+PrintGCCause"
+        echo ${FLINK_JVM_GC_LOGGING_OPTS}
+    else
+        echo
+    fi
+}
+
+# Format default heapdump options
+getHeapDumpOpts() {
+    local dump_dest_name=$1
+    local log=$2
+    if [ ${FLINK_JVM_HEAPDUMP_ON_OOM} ];then
+        FLINK_JVM_HEAPDUMP_OPTS="-XX:+HeapDumpOnOutOfMemoryError \
+          -XX:HeapDumpPath=${FLINK_JVM_HEAPDUMP_DIRECTORY}/$dump_dest_name \
+          -XX:OnOutOfMemoryError=\"echo -e 'OutOfMemoryError! Killing current process %p...\n \
+          Check gc logs and heapdump file(${FLINK_JVM_HEAPDUMP_DIRECTORY}/$dump_dest_name) for details.' > ${log}; kill -9 %p\""
+        echo $FLINK_JVM_HEAPDUMP_OPTS
+    else
+        echo
+    fi
 }
